OPHAKTKEH-100: review fixes